# tiny-devices

./: CMakeLists.txt  README.md  lib_tiny-devices.mk  library.json
include/: aip1640_8x8_matrix.h  async_sht30.h  eeprom_24lc32.h  sht30.h
src/: aip1640_8x8_matrix.c  async_sht30.c  eeprom_24lc32.c  sht30.c
